# pDCX

./: .gitignore  CMakeLists.txt  Makefile  aclocal.m4  configure  configure.ac  dc.cpp  sa_check.cpp  tuple.cpp  tuple.h  util.h
src/: CMakeLists.txt  Makefile.am  dc.cpp  sachecker.h  tuple.cpp  tuple.h  util.h  yuta-sais-lite.h
src/examples/: abracadabra4  abracadabra4.sa  abracadabra8  abracadabra8.sa  mississippi  mississippi-debug.1.0.txt  mississippi-debug.1.1.txt
tools/: calc_dcparam.cc
